--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -48,12 +48,14 @@
             android:layout_height="55dp"
             android:layout_margin="5sp">
 
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/tool_bar_profile_image"
-                android:layout_width="60dp"
-                android:layout_height="wrap_content"
-                android:src="@drawable/img"
-                app:civ_border_width="2dp" />
+            <ImageView
+                android:id="@+id/profile_image"
+                android:layout_width="52dp"
+                android:layout_height="52dp"
+                android:background="@drawable/circular"
+                android:backgroundTint="@color/white"
+                android:layout_toRightOf="@id/back_btn"
+                android:src="@drawable/img" />
 
             <TextView
                 android:id="@+id/user"
@@ -67,6 +69,7 @@
 
         <EditText
             android:id="@+id/post"
+            android:inputType="textImeMultiLine|textMultiLine"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/profile_bar"
@@ -74,6 +77,14 @@
             android:minHeight="80dp"
             android:padding="20dp"
             android:singleLine="true" />
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:visibility="gone" />
+
 
     </RelativeLayout>
 
