--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -25,30 +25,6 @@
         android:layout_marginTop="15dp"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
-            android:id="@+id/profilePicture"
-            android:layout_width="130dp"
-            android:layout_height="130dp"
-            android:layout_marginTop="80dp"
-            android:layout_marginRight="30dp"
-            android:background="@drawable/image"
-            android:contentDescription="Profile Picture"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <Button
-            android:id="@+id/changePicture"
-            android:layout_width="130dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginEnd="28dp"
-            android:padding="1dp"
-            android:text="Change Picture"
-            android:textSize="13sp"
-            app:backgroundTint="#F4ABAB"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/profilePicture" />
-
         <TextView
             android:id="@+id/usernameText"
             android:layout_width="wrap_content"
@@ -103,14 +79,13 @@
             android:id="@+id/friends"
             android:layout_width="80dp"
             android:layout_height="85dp"
-            android:layout_marginRight="35dp"
             android:layout_marginTop="30dp"
-            android:padding="29dp"
             android:drawableLeft="@drawable/ic_profile"
+            android:padding="29dp"
             android:textSize="12sp"
             app:backgroundTint="#FFFFFF"
-            app:layout_constraintEnd_toStartOf="@+id/changePicture"
-            app:layout_constraintTop_toBottomOf="@+id/emailText" />
+            app:layout_constraintTop_toBottomOf="@+id/emailText"
+            tools:layout_editor_absoluteX="138dp" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/itemsList"
@@ -126,6 +101,36 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" />
+
+        <ImageView
+            android:id="@+id/profile_image"
+            android:layout_width="127dp"
+            android:layout_height="131dp"
+            android:background="@drawable/img"
+            android:src="@drawable/circular"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.894"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.155" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/profilechangebtn"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:clickable="true"
+            android:src="@drawable/baseline_change_circle_24"
+            app:fabSize="auto"
+            app:fabCustomSize="30dp"
+            app:layout_constraintBottom_toBottomOf="@+id/profile_image"
+            app:layout_constraintEnd_toEndOf="@+id/profile_image"
+            app:layout_constraintHorizontal_bias="0.892"
+            app:layout_constraintStart_toStartOf="@+id/profile_image"
+            app:layout_constraintTop_toTopOf="@+id/profile_image"
+            app:layout_constraintVertical_bias="1.0"
+            android:focusable="true" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <Button
