--- a/app/src/main/res/layout/activity_inside_chat.xml
+++ b/app/src/main/res/layout/activity_inside_chat.xml
@@ -51,11 +51,13 @@
     </RelativeLayout>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/chat_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/toolbar"
         android:layout_above="@id/bottom_layout"
-        android:id="@+id/chat_recycler_view"/>
+        android:layout_below="@id/toolbar"
+        android:layout_marginTop="1dp"
+        android:layout_marginBottom="-1dp" />
 
     <RelativeLayout
         android:layout_width="match_parent"
