--- a/app/src/main/res/layout/post_cover.xml
+++ b/app/src/main/res/layout/post_cover.xml
@@ -8,15 +8,7 @@
     android:layout_margin="10dp"
     android:elevation="2dp">
 
-    <ImageView
-        android:id="@+id/profile_pic_image_view"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:background="@drawable/circular"
-        android:backgroundTint="@color/white"
-        android:padding="10dp"
-        android:layout_margin="10dp"
-        android:src="@drawable/img" />
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -27,32 +19,41 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-
+            <ImageView
+                android:id="@+id/profile_pic_image_view"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_margin="10dp"
+                android:background="@drawable/circular"
+                android:backgroundTint="@color/white"
+                android:padding="10dp"
+                android:src="@drawable/img" />
             <TextView
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="20dp"
                 android:id="@+id/user_name_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_toEndOf="@id/profile_pic_image_view"
                 android:layout_marginStart="8sp"
-                android:textSize="40sp"
+                android:textSize="25sp"
                 android:textStyle="bold"
                 tools:text="User name" />
         </RelativeLayout>
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView
-                android:layout_marginTop="30dp"
-                android:layout_marginStart="8sp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                tools:text="S 2025CS 2025CS 2025CS 2025CS 2025CS 2025"
-                android:textSize="30sp"
-                android:id="@+id/contact_user_info"/>
-        </RelativeLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            >
+
+            <TextView
+                android:id="@+id/contact_user_info"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8sp"
+
+                android:textSize="30sp"
+                tools:text="S 2025CS 2025CS 2025CS 2025CS 2025CS 2025" />
 
             <ImageButton
                 android:layout_marginTop="10dp"
