--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -64,39 +64,28 @@
             app:layout_constraintTop_toBottomOf="@+id/usernameText" />
 
         <TextView
-            android:id="@+id/majorText"
+            android:id="@+id/majorYearText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:layout_marginBottom="75dp"
+            android:layout_marginLeft="12dp"
+            android:layout_marginTop="12dp"
+            android:padding="5dp"
             android:background="@drawable/rounded_background"
-            android:text="Major: "
-            android:textSize="15dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/itemsList"/>
-        <TextView
-            android:id="@+id/yearText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="25dp"
-            android:layout_marginBottom="75dp"
-            android:background="@drawable/rounded_background"
-            android:text="Year: "
-            android:textSize="15dp"
-            app:layout_constraintStart_toEndOf="@id/majorText"
-            app:layout_constraintBottom_toTopOf="@id/itemsList"/>
+            android:text="XXXX XXXX"
+            app:layout_constraintStart_toEndOf="@id/emailText"
+            app:layout_constraintTop_toBottomOf="@+id/usernameText" />
 
         <TextView
             android:id="@+id/classesText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
-            android:layout_marginBottom="20dp"
-            android:background="@drawable/rounded_background"
+            android:layout_marginTop="30dp"
+            android:padding="10dp"
             android:text="Classes: "
-            android:textSize="20dp"
+            android:textSize="25dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/itemsList"/>
+            app:layout_constraintTop_toBottomOf="@id/emailText"/>
 
         <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/itemsList"
@@ -104,7 +93,7 @@
         android:layout_height="0dp"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
-        android:layout_marginTop="130dp"
+        android:layout_marginTop="100dp"
         android:layout_marginBottom="100dp"
         android:padding="25dp"
         app:layout_constraintTop_toBottomOf="@+id/emailText"
