--- a/app/src/main/res/layout/class_detail_activity.xml
+++ b/app/src/main/res/layout/class_detail_activity.xml
@@ -56,8 +56,36 @@
             android:layout_height="wrap_content">
 
             <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/fullname_container"
+                >
+
+                <TextView
+                    android:id="@+id/fullname"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="10dp"
+                    android:text="CSCI 310: Software Engineering (4.0 units)"
+                    android:textColor="@color/black"
+                    android:textSize="30sp"
+                    android:textStyle="bold" />
+                <View
+                    android:id="@+id/divider"
+                    android:layout_below="@+id/fullname"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_margin="10dp"
+                    android:background="?android:attr/listDivider" />
+
+
+            </RelativeLayout>
+
+            <RelativeLayout
                 android:id="@+id/prof_container"
                 android:layout_width="match_parent"
+                android:layout_below="@+id/fullname_container"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="10dp">
@@ -98,6 +126,7 @@
                         android:textColor="@color/black"
                         android:textSize="32sp"
                         android:textStyle="bold" />
+
                 </LinearLayout>
 
             </RelativeLayout>
@@ -113,6 +142,11 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:orientation="vertical">
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_margin="10dp"
+                        android:background="?android:attr/listDivider" />
 
                     <TextView
                         android:id="@+id/description"
@@ -137,6 +171,11 @@
                         android:textColor="@color/black"
                         android:textSize="20sp"
                         android:textStyle="bold" />
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_margin="10dp"
+                        android:background="?android:attr/listDivider" />
 
                     <RelativeLayout
                         android:id="@+id/material_container"
@@ -149,6 +188,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
                             android:orientation="vertical">
+
 
                             <TextView
                                 android:id="@+id/material"
@@ -170,6 +210,11 @@
 
 
                     </RelativeLayout>
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_margin="10dp"
+                        android:background="?android:attr/listDivider" />
 
                     <RelativeLayout
                         android:id="@+id/roster_container"
